# hackdelft

./: .gitignore  README.md  addresses.csv  coordinates.pkl  example_input.json  google_interface.py  graph.pkl  knn_graph_generation.ipynb  main.py  map_generation_example.py  requirenments.txt
backend/: README.md  pyproject.toml  requirements.txt
backend/app/src/: graph.py  routing.py
frontend/: package-lock.json  package.json
frontend/src/components/: MapComponent.vue
frontend/src/router/: index.ts
frontend/src/views/: InputFormView.vue
src/: __init__.py  graph.py  render_map.py  solver.py  vehicle.py
